# vecmat

./: CMakeLists.txt  LICENSE  README.md
cmake/: vecmat-config.cmake.in
include/vecmat/: matrix.hpp  vector.hpp
test/: CMakeLists.txt  matrix.cpp  matrix_access.cpp  matrix_assignment.cpp  matrix_binary.cpp  matrix_compound_assignment.cpp  matrix_dot.cpp  matrix_resize_cast.cpp  matrix_stream.cpp  matrix_unary.cpp  vector.cpp  vector_access.cpp  vector_assignment.cpp  vector_binary.cpp  vector_compound_assignment.cpp  vector_cross.cpp  vector_dot.cpp  vector_iterator.cpp  vector_resize_cast.cpp  vector_stream.cpp  vector_unary.cpp
